--- a/app/assets/styles/partials/components/_question.scss
+++ b/app/assets/styles/partials/components/_question.scss
@@ -85,6 +85,9 @@
     margin-bottom: 2rem;
   }
   .answer {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
+    &:last-of-type {
+      margin-bottom: 0;
+    }
   }
 }
