--- a/app/assets/styles/partials/vars/_colors.scss
+++ b/app/assets/styles/partials/vars/_colors.scss
@@ -14,7 +14,7 @@ $color-secondary: #033e58;
 
 $color-light-blue: tint($color-secondary, 40);
 
-$color-red: #c50b0b;
+$color-red: #d0021b;
 $color-yellow: yellow;
 $color-amber: #fe781f;
 $color-blue: #4263c2;
